--- a/codalab/config/templates/nginx.conf
+++ b/codalab/config/templates/nginx.conf
@@ -45,6 +45,7 @@ server {
     server_name {{ ALLOWED_HOSTS|join:" " }}{% if SERVER_NAME not in ALLOWED_HOSTS %} {{SERVER_NAME}}{% endif %};
     charset     utf-8;
     client_max_body_size 4096m;
+    keepalive_timeout 2;
 
     {% if BUNDLE_SERVICE_URL|length > 0 %}
     location /bundleservice {
