Issue #1090: stop buffering files when uploading

--- a/codalab/config/templates/nginx.conf
+++ b/codalab/config/templates/nginx.conf
@@ -45,7 +45,10 @@ server {
     server_name {{ ALLOWED_HOSTS|join:" " }}{% if SERVER_NAME not in ALLOWED_HOSTS %} {{SERVER_NAME}}{% endif %};
     charset     utf-8;
     client_max_body_size 4096m;
-    keepalive_timeout 2;
+    keepalive_timeout 10;
+    proxy_buffering off;
+    proxy_read_timeout 1200;
+    send_timeout 1200;
 
     {% if BUNDLE_SERVICE_URL|length > 0 %}
     location /bundleservice {
