Issue #1090: using mb instead of m

--- a/codalab/config/templates/nginx.conf
+++ b/codalab/config/templates/nginx.conf
@@ -45,7 +45,7 @@ server {
     server_name {{ ALLOWED_HOSTS|join:" " }}{% if SERVER_NAME not in ALLOWED_HOSTS %} {{SERVER_NAME}}{% endif %};
     charset     utf-8;
     client_max_body_size 4096m;
-    client_body_buffer_size 256mb;
+    client_body_buffer_size 64m;
     keepalive_timeout 10;
     #proxy_buffering off;
     #proxy_read_timeout 1200;
