--- a/codalab/config/templates/nginx.conf
+++ b/codalab/config/templates/nginx.conf
@@ -47,9 +47,9 @@ server {
     client_max_body_size 4096m;
     client_body_buffer_size 64m;
     keepalive_timeout 10;
-    #proxy_buffering off;
-    #proxy_read_timeout 1200;
-    #send_timeout 1200;
+    proxy_buffering off;
+    proxy_read_timeout 1200;
+    send_timeout 1200;
 
     {% if BUNDLE_SERVICE_URL|length > 0 %}
     location /bundleservice {
