Issue #1090: get rid of timeouts

--- a/codalab/config/templates/nginx.conf
+++ b/codalab/config/templates/nginx.conf
@@ -48,8 +48,8 @@ server {
     client_body_buffer_size 64m;
     keepalive_timeout 10;
     proxy_buffering off;
-    proxy_read_timeout 1200;
-    send_timeout 1200;
+    #proxy_read_timeout 1200;
+    #send_timeout 1200;
 
     {% if BUNDLE_SERVICE_URL|length > 0 %}
     location /bundleservice {
