Issue #1090: tweak timeouts

--- a/codalab/config/templates/nginx.conf
+++ b/codalab/config/templates/nginx.conf
@@ -46,10 +46,12 @@ server {
     charset     utf-8;
     client_max_body_size 4096m;
     client_body_buffer_size 64m;
-    keepalive_timeout 10;
-    proxy_buffering off;
-    #proxy_read_timeout 1200;
-    #send_timeout 1200;
+    #keepalive_timeout 10;
+    #proxy_buffering off;
+    proxy_connect_timeout       1200;
+    proxy_send_timeout          1200;
+    proxy_read_timeout 1200;
+    send_timeout 1200;
 
     {% if BUNDLE_SERVICE_URL|length > 0 %}
     location /bundleservice {
