--- a/codalab/config/templates/nginx.conf
+++ b/codalab/config/templates/nginx.conf
@@ -48,10 +48,10 @@ server {
     client_body_buffer_size 64m;
     #keepalive_timeout 10;
     #proxy_buffering off;
-    proxy_connect_timeout       1200;
-    proxy_send_timeout          1200;
-    proxy_read_timeout 1200;
-    send_timeout 1200;
+    #proxy_connect_timeout       1200;
+    #proxy_send_timeout          1200;
+    #proxy_read_timeout 1200;
+    #send_timeout 1200;
 
     {% if BUNDLE_SERVICE_URL|length > 0 %}
     location /bundleservice {
