fix: trying to fix new relic, using uwsgi launching method instead of inside wsgi.py

--- a/codalab/config/templates/uwsgi.ini
+++ b/codalab/config/templates/uwsgi.ini
@@ -5,6 +5,7 @@ socket = {{PROJECT_DIR}}/var/{{SERVER_NAME}}-{{PORT}}.sock
 pidfile = {{PROJECT_DIR}}/var/uwsgi-{{PORT}}.pid
 master = true
 enable-threads = true
+single-interpreter = true
 processes = 8
 module=codalab.wsgi:application
 chdir={{PROJECT_DIR}}
