fix: set newrelic env var through django settings

--- a/codalab/config/templates/supervisor.conf
+++ b/codalab/config/templates/supervisor.conf
@@ -17,7 +17,7 @@ prompt = mysupervisor
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:uwsgi]
-command=NEW_RELIC_CONFIG_FILE={{PROJECT_DIR}}/newrelic.ini {{VIRTUAL_ENV}}/bin/newrelic-admin run-program {{VIRTUAL_ENV}}/bin/uwsgi --ini {{CONFIG_GEN_GENERATED_DIR}}/uwsgi.ini
+command={{VIRTUAL_ENV}}/bin/newrelic-admin run-program {{VIRTUAL_ENV}}/bin/uwsgi --ini {{CONFIG_GEN_GENERATED_DIR}}/uwsgi.ini
 numprocs=1
 stdout_logfile = {{PROJECT_DIR}}/var/webapp.log
 stderr_logfile = {{PROJECT_DIR}}/var/webapp-err.log
