fix: issue #1230 stopasgroup arg added

--- a/codalab/config/templates/supervisor.conf
+++ b/codalab/config/templates/supervisor.conf
@@ -23,6 +23,7 @@ stdout_logfile = {{PROJECT_DIR}}/var/webapp.log
 stderr_logfile = {{PROJECT_DIR}}/var/webapp-err.log
 umask = 002
 stopsignal=QUIT
+stopasgroup=true
 killasgroup=true
 
 [program:webworker]
