feat: worker monitoring completed

--- a/codalab/codalabtools/deploy/configs/upstart/codalab-compute-worker.conf
+++ b/codalab/codalabtools/deploy/configs/upstart/codalab-compute-worker.conf
@@ -9,5 +9,5 @@ setuid azureuser
 script
     . /home/azureuser/venv/bin/activate
     cd /home/azureuser/
-    python -u /home/azureuser/codalab/codalab/codalabtools/compute/worker.py >>/home/azureuser/codalab/codalab/codalabtools/compute/worker.log 2>&1
+    sudo /home/azureuser/venv/bin/python -u /home/azureuser/codalab/codalab/codalabtools/compute/worker.py >>/home/azureuser/codalab/codalab/codalabtools/compute/worker.log 2>&1
 end script
