--- a/codalab/config/templates/supervisor.conf
+++ b/codalab/config/templates/supervisor.conf
@@ -1,8 +1,8 @@
 [supervisord]
-logfile = {{PROJECT_DIR}}/../logs/supervisord.log
+logfile = {{LOGS_PATH}}/supervisord.log
 logfile_maxbytes = 50MB
 loglevel = info
-pidfile = {{PROJECT_DIR}}/../logs/supervisord.pid
+pidfile = {{LOGS_PATH}}/supervisord.pid
 umask = 002
 environment = {% for k,v in STARTUP_ENV.items %}{% if not forloop.first %},{% endif %}{{k}}="{{v}}"{% endfor %}
 
@@ -19,8 +19,8 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [program:uwsgi]
 command={{VIRTUAL_ENV}}/bin/uwsgi --ini {{CONFIG_GEN_GENERATED_DIR}}/uwsgi.ini
 numprocs=1
-stdout_logfile = {{PROJECT_DIR}}/../logs/webapp.log
-stderr_logfile = {{PROJECT_DIR}}/../logs/webapp-err.log
+stdout_logfile = {{LOGS_PATH}}/webapp.log
+stderr_logfile = {{LOGS_PATH}}/webapp-err.log
 umask = 002
 stopsignal=QUIT
 stopasgroup=true
@@ -29,8 +29,8 @@ killasgroup=true
 [program:webworker]
 environment = {% for k,v in STARTUP_ENV.items %}{% if not forloop.first %},{% endif %}{{k}}="{{v}}"{% endfor %}
 command={{VIRTUAL_ENV}}/bin/python {{PROJECT_APP_DIR}}/worker.py
-stdout_logfile = {{PROJECT_DIR}}/../logs/webworker.log
-stderr_logfile = {{PROJECT_DIR}}/../logs/webworker-err.log
+stdout_logfile = {{LOGS_PATH}}/webworker.log
+stderr_logfile = {{LOGS_PATH}}/webworker-err.log
 directory={{PROJECT_DIR}}
 stopsignal=QUIT
 umask = 002
@@ -40,24 +40,24 @@ umask = 002
 [program:bundleserver]
 environment = PYTHONPATH="{{BUNDLE_SERVICE_CODE_PATH}}"
 command={{VIRTUAL_ENV}}/bin/python {{BUNDLE_SERVICE_CODE_PATH}}/codalab/bin/cl.py server
-stdout_logfile = {{PROJECT_DIR}}/../logs/bundleserver.log
-stderr_logfile = {{PROJECT_DIR}}/../logs/bundleserver-err.log
+stdout_logfile = {{LOGS_PATH}}/bundleserver.log
+stderr_logfile = {{LOGS_PATH}}/bundleserver-err.log
 directory={{BUNDLE_SERVICE_CODE_PATH}}
 umask = 002
 
 [program:bundleworker]
 environment = PYTHONPATH="{{BUNDLE_SERVICE_CODE_PATH}}"
 command={{VIRTUAL_ENV}}/bin/python {{BUNDLE_SERVICE_CODE_PATH}}/codalab/bin/cl.py work-manager -t q
-stdout_logfile = {{PROJECT_DIR}}/../logs/bundleworker.log
-stderr_logfile = {{PROJECT_DIR}}/../logs/bundleworker-err.log
+stdout_logfile = {{LOGS_PATH}}/bundleworker.log
+stderr_logfile = {{LOGS_PATH}}/bundleworker-err.log
 directory={{BUNDLE_SERVICE_CODE_PATH}}
 umask = 002
 
 [program:q]
 environment = PYTHONPATH="{{BUNDLE_SERVICE_CODE_PATH}}"
 command={{BUNDLE_SERVICE_CODE_PATH}}/codalab/scripts/q -mode master
-stdout_logfile = {{PROJECT_DIR}}/../logs/q.log
-stderr_logfile = {{PROJECT_DIR}}/../logs/q-err.log
+stdout_logfile = {{LOGS_PATH}}/q.log
+stderr_logfile = {{LOGS_PATH}}/q-err.log
 directory={{BUNDLE_SERVICE_CODE_PATH}}
 umask = 002
 
