update logs, q path

--- a/codalab/config/templates/supervisor.conf
+++ b/codalab/config/templates/supervisor.conf
@@ -55,7 +55,7 @@ umask = 002
 
 [program:q]
 environment = PYTHONPATH="{{BUNDLE_SERVICE_CODE_PATH}}"
-command={{BUNDLE_SERVICE_CODE_PATH}}/codalab/scripts/q -mode master
+command={{BUNDLE_SERVICE_CODE_PATH}}/scripts/q -mode master
 stdout_logfile = {{LOGS_PATH}}/q.log
 stderr_logfile = {{LOGS_PATH}}/q-err.log
 directory={{BUNDLE_SERVICE_CODE_PATH}}
