update nginx conf

--- a/codalab/config/templates/nginx.conf
+++ b/codalab/config/templates/nginx.conf
@@ -1,6 +1,6 @@
 
 upstream django {
-    server unix:{{PROJECT_DIR}}/var/{{SERVER_NAME}}-{{PORT}}.sock;
+    server unix:{{LOGS_PATH}}/{{SERVER_NAME}}-{{PORT}}.sock;
 }
 
 {% if BUNDLE_SERVICE_URL|length > 0 %}
@@ -103,6 +103,6 @@ server {
     error_page 502 /error/50x.html;
     location ^~ /error/ {
         internal;
-        root /home/azureuser/deploy/codalab/static;
+        root {{PROJECT_DIR}}/codalab/static;
     }
 }
