fix static path

--- a/codalab/config/templates/nginx.conf
+++ b/codalab/config/templates/nginx.conf
@@ -103,6 +103,6 @@ server {
     error_page 502 /error/50x.html;
     location ^~ /error/ {
         internal;
-        root {{PROJECT_DIR}}/codalab/static;
+        root {{STATIC_ROOT}};
     }
 }
