--- a/codalab/config/templates/nginx.conf
+++ b/codalab/config/templates/nginx.conf
@@ -55,6 +55,9 @@ server {
 
     {% if BUNDLE_SERVICE_URL|length > 0 %}
     location /bundleservice {
+        if ($maintenance = 1) {
+            return 503;
+        }
         proxy_set_header Host $host;
         proxy_pass http://bundleservice/;
         proxy_connect_timeout       1200;
