split supervisord, settings page based on which of worksheets/competitions is enabled

--- a/codalab/config/templates/supervisor.conf
+++ b/codalab/config/templates/supervisor.conf
@@ -26,6 +26,8 @@ stopsignal=QUIT
 stopasgroup=true
 killasgroup=true
 
+{% if ENABLE_COMPETITIONS %}
+
 [program:webworker]
 environment = {% for k,v in STARTUP_ENV.items %}{% if not forloop.first %},{% endif %}{{k}}="{{v}}"{% endfor %}
 command={{VIRTUAL_ENV}}/bin/python {{PROJECT_APP_DIR}}/worker.py
@@ -35,7 +37,9 @@ directory={{PROJECT_DIR}}
 stopsignal=QUIT
 umask = 002
 
-{% if BUNDLE_SERVICE_CODE_PATH|length > 0 %}
+{% endif %}
+
+{% if ENABLE_WORKSHEETS %}
 
 [program:bundleserver]
 environment = PYTHONPATH="{{BUNDLE_SERVICE_CODE_PATH}}"
