--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,6 @@ codalab/clip
 codalab/scores.txt
 codalab/codalab/scores.txt
 
-# Bundles prototype #
-#####################
-bundles/generated
-bundles/html_out
-bundles/README.html
-bundles/bundles.db
-bundles/bundles.fs
-
 # Virtuelenv files #
 ####################
 **/**/venv
@@ -26,11 +18,6 @@ venv/
 *.pyproj
 *.suo
 *.sln
-
-# Compass/SASS generated files #
-################################
-**/**/.sass-cache
-.sass-cache*
 
 # Python specific files #
 #########################
@@ -77,12 +64,6 @@ venv/
 *.db
 *.pid
 
-# Generated data files #
-########################
-codalab/.coverage
-codalab/coverage.xml
-codalab/cover/**/**
-
 # OS generated files #
 ######################
 .DS_Store
@@ -93,24 +74,14 @@ codalab/cover/**/**
 Icon?
 ehthumbs.db
 Thumbs.db
-/other/*
-*_db.sqlite
 codalab/static/*/*
 codalab/config/generated
-# pip on windows does not do the right thing.
-src/
-requirements/src/
 *.dump
 *.cache
 wheel_packages/
 
-/codalab/MathJax-master/
-
-/codalab/apps/web/static/js/vendor/fonts/
-
-/codalab/apps/web/static/js/vendor/mathjax/
-
-/codalab/local_fabfile.py
-
-password.txt
-worker.log
+# Local mode
+**/vendor/ace-editor
+**/vendor/mathjax
+MathJax-master
+ace-builds-master
