Ignoring local_fabile

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,7 @@ wheel_packages/
 **/vendor/mathjax
 MathJax-master
 ace-builds-master
+
+# Local files to be ignored #
+##############################
+/codalab/local_fabfile.py
