--- a/circle.yml
+++ b/circle.yml
@@ -3,8 +3,8 @@ machine:
     version: 2.7.5
 
 dependencies:
-  pre:
-    - pip install -r codalab/requirements/common.txt
+  override:
+    - ./setup.sh
 
 test:
   override:
