--- a/codalab/apps/web/package.json
+++ b/codalab/apps/web/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp && gulp less",
     "jsx": "gulp",
+    "less": "gulp less",
     "clean": "gulp clean"
   },
   "author": "",
@@ -15,6 +17,7 @@
     "babel-preset-react": "^6.3.13",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.1"
+    "gulp-babel": "^6.1.1",
+    "gulp-less": "^3.0.5"
   }
 }
