#44: Use Bower to track frontend dependencies
Now all frontend vendor dependencies are tracked via Bower. This
creates two new directories: static/bower_components for all vendor
dependencies that used to live in static/js/vendor, as well as a
static/custom directory for all custom modified JS/CSS, eg. our
custom Modernizr.

--- a/codalab/apps/web/package.json
+++ b/codalab/apps/web/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "bower": "bower install",
     "build": "gulp jsx && gulp less",
+    "clean": "gulp clean",
     "jsx": "gulp jsx",
     "less": "gulp less",
-    "clean": "gulp clean"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.4.0",
     "babel-preset-react": "^6.3.13",
+    "bower": "^1.7.7",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
