Create rest-server process

--- a/codalab/config/templates/supervisor.conf
+++ b/codalab/config/templates/supervisor.conf
@@ -42,6 +42,14 @@ stderr_logfile = {{LOGS_PATH}}/bundleworker-err.log
 directory={{BUNDLE_SERVICE_CODE_PATH}}
 umask = 002
 
+[program:restserver]
+environment = PYTHONPATH="{{BUNDLE_SERVICE_CODE_PATH}}"
+command={{VIRTUAL_ENV}}/bin/python {{BUNDLE_SERVICE_CODE_PATH}}/codalab/bin/cl.py rest-server
+stdout_logfile = {{LOGS_PATH}}/restserver.log
+stderr_logfile = {{LOGS_PATH}}/restserver-err.log
+directory={{BUNDLE_SERVICE_CODE_PATH}}
+umask = 002
+
 [program:q]
 environment = PYTHONPATH="{{BUNDLE_SERVICE_CODE_PATH}}"
 command={{BUNDLE_SERVICE_CODE_PATH}}/scripts/q -mode master
