--- a/codalab/config/templates/nginx.conf
+++ b/codalab/config/templates/nginx.conf
@@ -1,12 +1,20 @@
 upstream django {
+    {% if DJANGO_USE_UWSGI %}
     server unix:{{LOGS_PATH}}/{{SERVER_NAME}}-{{PORT}}.sock;
+    {% else %}
+    server 127.0.0.1:2700;
+    {% endif %}
 }
 
 upstream bundleservice {
     server 127.0.0.1:2800;
 }
 
-{% if SSL_CERTIFICATE|length > 0 %}
+upstream rest {
+    server 127.0.0.1:2900;
+}
+
+{% if SSL_CERTIFICATE and SSL_CERTIFICATE|length > 0 %}
 server {
     listen {{PORT}};
     server_name {{ SSL_ALLOWED_HOSTS|join:" " }};
@@ -17,10 +25,9 @@ server {
 {% endif %}
 
 server {
-
     set $maintenance {{MAINTENANCE_MODE}};
 
-    {% if SSL_CERTIFICATE|length > 0 %}
+    {% if SSL_CERTIFICATE and SSL_CERTIFICATE|length > 0 %}
       listen {{SSL_PORT}} ssl;
       ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
       ssl_ciphers RC4:HIGH:!aNULL:!MD5;
@@ -54,8 +61,20 @@ server {
         if ($maintenance = 1) {
             return 503;
         }
-        proxy_set_header Host $host;
+        proxy_set_header Host $http_host;
         proxy_pass http://bundleservice/;
+        proxy_connect_timeout       1200;
+        proxy_send_timeout          1200;
+        proxy_read_timeout          1200;
+        send_timeout                1200;
+    }
+
+    location /rest {
+        if ($maintenance = 1) {
+            return 503;
+        }
+        proxy_set_header Host $http_host;
+        proxy_pass http://rest;
         proxy_connect_timeout       1200;
         proxy_send_timeout          1200;
         proxy_read_timeout          1200;
@@ -74,6 +93,7 @@ server {
         if ($maintenance = 1) {
             return 503;
         }
+        {% if DJANGO_USE_UWSGI %}
         uwsgi_pass  django;
         # Up timeout from default 60 to 1200 seconds (20 minutes?) to see if it helps avoid 504's
         uwsgi_read_timeout 1200;
@@ -95,6 +115,14 @@ server {
         uwsgi_param   X-Real-IP            $remote_addr;
         uwsgi_param   X-Forwarded-For      $proxy_add_x_forwarded_for;
         uwsgi_param   X-Forwarded-Proto    $http_x_forwarded_proto;
+        {% else %}
+        proxy_set_header Host $http_host;
+        proxy_pass http://django/;
+        proxy_connect_timeout       1200;
+        proxy_send_timeout          1200;
+        proxy_read_timeout          1200;
+        send_timeout                1200;
+        {% endif %}
     }
 
     error_page 503 /error/503.html;
