--- a/codalab/config/templates/nginx.conf
+++ b/codalab/config/templates/nginx.conf
@@ -61,8 +61,9 @@ server {
         if ($maintenance = 1) {
             return 503;
         }
-        proxy_set_header Host $http_host;
         proxy_pass http://bundleservice/;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $http_host;
         proxy_connect_timeout       1200;
         proxy_send_timeout          1200;
         proxy_read_timeout          1200;
@@ -73,8 +74,9 @@ server {
         if ($maintenance = 1) {
             return 503;
         }
-        proxy_set_header Host $http_host;
         proxy_pass http://rest;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $http_host;
         proxy_connect_timeout       1200;
         proxy_send_timeout          1200;
         proxy_read_timeout          1200;
@@ -116,8 +118,9 @@ server {
         uwsgi_param   X-Forwarded-For      $proxy_add_x_forwarded_for;
         uwsgi_param   X-Forwarded-Proto    $http_x_forwarded_proto;
         {% else %}
-        proxy_set_header Host $http_host;
         proxy_pass http://django/;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $http_host;
         proxy_connect_timeout       1200;
         proxy_send_timeout          1200;
         proxy_read_timeout          1200;
