--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *.pyc
 
-# Eclipse files.
+# Eclipse files
 .*project
 .settings
 
@@ -10,19 +10,7 @@
 codalab/static
 codalab/config/generated
 
-# Eclipse files.
-.*project
-
-# PyCharm files
-.idea/
-
 venv/
 
-# 3rd-party
-**/vendor/ace-editor
-**/vendor/mathjax
-MathJax-master
-ace-builds-master
-
-# Ignore dev database file
+# Dev database file
 *.sqlite3
