--- a/codalab/config/templates/supervisor.conf
+++ b/codalab/config/templates/supervisor.conf
@@ -44,7 +44,7 @@ umask = 002
 
 [program:restserver]
 environment = PYTHONPATH="{{BUNDLE_SERVICE_CODE_PATH}}"
-command={{VIRTUAL_ENV}}/bin/python {{BUNDLE_SERVICE_CODE_PATH}}/codalab/bin/cl.py rest-server
+command={{VIRTUAL_ENV}}/bin/python {{BUNDLE_SERVICE_CODE_PATH}}/codalab/bin/cl.py rest-server -p 4
 stdout_logfile = {{LOGS_PATH}}/restserver.log
 stderr_logfile = {{LOGS_PATH}}/restserver-err.log
 directory={{BUNDLE_SERVICE_CODE_PATH}}
