--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # PyCharm files
 .idea/
 
+# Local sqlite database
+*.sqlite3
+
 codalab/static
 codalab/config/generated
 codalab/apps/web/static/css/imports.css
