--- a/codalab/apps/web/bower.json
+++ b/codalab/apps/web/bower.json
@@ -36,8 +36,7 @@
     "Readmore.js": "readmore-js#^2.1.0",
     "MathJax": "^2.6.0",
     "ace-builds": "^1.2.3",
-    "jquery-ui": "^1.11.4",
-    "jsonapi-datastore": "^0.4.0-beta"
+    "jquery-ui": "^1.11.4"
   },
   "resolutions": {
     "jquery": "~1.10.2"
