--- a/codalab/config/templates/supervisor.conf
+++ b/codalab/config/templates/supervisor.conf
@@ -36,7 +36,7 @@ umask = 002
 
 [program:bundleworker]
 environment = PYTHONPATH="{{BUNDLE_SERVICE_CODE_PATH}}"
-command={{BUNDLE_SERVICE_VIRTUAL_ENV}}/bin/python {{BUNDLE_SERVICE_CODE_PATH}}/codalab/bin/cl.py work-manager -t q
+command={{BUNDLE_SERVICE_VIRTUAL_ENV}}/bin/python {{BUNDLE_SERVICE_CODE_PATH}}/codalab/bin/cl.py bundle-manager
 stdout_logfile = {{LOGS_PATH}}/bundleworker.log
 stderr_logfile = {{LOGS_PATH}}/bundleworker-err.log
 directory={{BUNDLE_SERVICE_CODE_PATH}}
@@ -47,13 +47,5 @@ environment = PYTHONPATH="{{BUNDLE_SERVICE_CODE_PATH}}"
 command={{BUNDLE_SERVICE_VIRTUAL_ENV}}/bin/python {{BUNDLE_SERVICE_CODE_PATH}}/codalab/bin/cl.py rest-server -p 4
 stdout_logfile = {{LOGS_PATH}}/restserver.log
 stderr_logfile = {{LOGS_PATH}}/restserver-err.log
-directory={{BUNDLE_SERVICE_CODE_PATH}}
-umask = 002
-
-[program:q]
-environment = PYTHONPATH="{{BUNDLE_SERVICE_CODE_PATH}}"
-command={{BUNDLE_SERVICE_CODE_PATH}}/scripts/q -mode master
-stdout_logfile = {{LOGS_PATH}}/q.log
-stderr_logfile = {{LOGS_PATH}}/q-err.log
 directory={{BUNDLE_SERVICE_CODE_PATH}}
 umask = 002
