Rename bundle worker to bundle manager.

--- a/codalab/config/templates/supervisor.conf
+++ b/codalab/config/templates/supervisor.conf
@@ -34,11 +34,11 @@ stderr_logfile = {{LOGS_PATH}}/bundleserver-err.log
 directory={{BUNDLE_SERVICE_CODE_PATH}}
 umask = 002
 
-[program:bundleworker]
+[program:bundlemanager]
 environment = PYTHONPATH="{{BUNDLE_SERVICE_CODE_PATH}}"
 command={{BUNDLE_SERVICE_VIRTUAL_ENV}}/bin/python {{BUNDLE_SERVICE_CODE_PATH}}/codalab/bin/cl.py bundle-manager
-stdout_logfile = {{LOGS_PATH}}/bundleworker.log
-stderr_logfile = {{LOGS_PATH}}/bundleworker-err.log
+stdout_logfile = {{LOGS_PATH}}/bundlemanager.log
+stderr_logfile = {{LOGS_PATH}}/bundlemanager-err.log
 directory={{BUNDLE_SERVICE_CODE_PATH}}
 umask = 002
 
