Set up automatic monitoring of wsprod and wstest.

--- a/codalab/config/templates/supervisor.conf
+++ b/codalab/config/templates/supervisor.conf
@@ -49,3 +49,7 @@ stdout_logfile = {{LOGS_PATH}}/restserver.log
 stderr_logfile = {{LOGS_PATH}}/restserver-err.log
 directory={{BUNDLE_SERVICE_CODE_PATH}}
 umask = 002
+
+[program:monitor]
+command={{BUNDLE_SERVICE_CODE_PATH}}/monitor.py --log-path {{LOGS_PATH}}/monitor.log --backup-path {{BACKUP_PATH}}
+umask = 002
