Update for REST server-only deployment (#221)

--- a/codalab/config/templates/nginx.conf
+++ b/codalab/config/templates/nginx.conf
@@ -6,8 +6,9 @@ upstream django {
     {% endif %}
 }
 
+# Also points to REST server temporarily as users migrate
 upstream bundleservice {
-    server 127.0.0.1:2800;
+    server 127.0.0.1:2900;
 }
 
 upstream rest {
