--- a/codalab/config/templates/supervisor.conf
+++ b/codalab/config/templates/supervisor.conf
@@ -26,14 +26,6 @@ stopsignal=QUIT
 stopasgroup=true
 killasgroup=true
 
-[program:bundleserver]
-environment = PYTHONPATH="{{BUNDLE_SERVICE_CODE_PATH}}"
-command={{BUNDLE_SERVICE_VIRTUAL_ENV}}/bin/python {{BUNDLE_SERVICE_CODE_PATH}}/codalab/bin/cl.py server
-stdout_logfile = {{LOGS_PATH}}/bundleserver.log
-stderr_logfile = {{LOGS_PATH}}/bundleserver-err.log
-directory={{BUNDLE_SERVICE_CODE_PATH}}
-umask = 002
-
 [program:bundlemanager]
 environment = PYTHONPATH="{{BUNDLE_SERVICE_CODE_PATH}}"
 command={{BUNDLE_SERVICE_VIRTUAL_ENV}}/bin/python {{BUNDLE_SERVICE_CODE_PATH}}/codalab/bin/cl.py bundle-manager
@@ -44,7 +36,7 @@ umask = 002
 
 [program:restserver]
 environment = PYTHONPATH="{{BUNDLE_SERVICE_CODE_PATH}}"
-command={{BUNDLE_SERVICE_VIRTUAL_ENV}}/bin/python {{BUNDLE_SERVICE_CODE_PATH}}/codalab/bin/cl.py rest-server -p 4
+command={{BUNDLE_SERVICE_VIRTUAL_ENV}}/bin/python {{BUNDLE_SERVICE_CODE_PATH}}/codalab/bin/cl.py server -p 4
 stdout_logfile = {{LOGS_PATH}}/restserver.log
 stderr_logfile = {{LOGS_PATH}}/restserver-err.log
 directory={{BUNDLE_SERVICE_CODE_PATH}}
