--- a/codalab/apps/web/bower.json
+++ b/codalab/apps/web/bower.json
@@ -37,7 +37,8 @@
     "MathJax": "^2.6.0",
     "ace-builds": "^1.2.3",
     "jquery-ui": "^1.11.4",
-    "eventEmitter": "^4.3.0"
+    "eventEmitter": "^4.3.0",
+    "jquery.terminal": "^1.4.0"
   },
   "resolutions": {
     "jquery": "~1.10.2"
