--- a/codalab/apps/web/bower.json
+++ b/codalab/apps/web/bower.json
@@ -32,7 +32,8 @@
     "jquery-ui": "^1.11.4",
     "eventEmitter": "^4.3.0",
     "jquery.terminal": "^1.4.0",
-    "jsonapi-datastore": "^0.4.0-beta"
+    "jsonapi-datastore": "^0.4.0-beta",
+    "keyboardevent-key-polyfill": "^1.1.0"
   },
   "resolutions": {
     "jquery": "~1.10.2"
