create Dockerfile for deployment, cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,17 @@
 # Local sqlite database
 *.sqlite3
 
-codalab/static
 codalab/config/generated
 codalab/apps/web/static/css/imports.css
+
+codalab/apps/web/node_modules/
+codalab/apps/web/static/dist
+codalab/apps/web/static/bower_components
 
 venv/
 
 # Selenium/geckodriver
-geckodriver.log
+geckodriver*
+
+# For .dockerignore
+.git/
