--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,1 @@
-.git/
-venv/
-codalab/config/generated
-codalab/apps/web/node_modules/
-codalab/apps/web/static/dist
-codalab/apps/web/static/bower_components
-codalab/apps/web/static/css/imports.css
-*.pyc
+.gitignore
