--- a/codalab/apps/web/package.json
+++ b/codalab/apps/web/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.4.0",
+    "babel-core": "^5.8.25",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.3.13",
     "bower": "^1.7.7",
     "del": "^2.2.0",
