--- a/codalab/apps/web/package.json
+++ b/codalab/apps/web/package.json
@@ -15,13 +15,20 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.4.0",
-    "babel-core": "^5.8.25",
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.3.13",
     "bower": "^1.7.7",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
-    "gulp-less": "^3.0.5"
+    "gulp-less": "^3.0.5",
+    "webpack": "^1.0.0"
+  },
+  "dependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-select": "^1.0.0-rc.10"
   }
 }
