--- a/codalab/apps/web/package.json
+++ b/codalab/apps/web/package.json
@@ -24,11 +24,20 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-less": "^3.0.5",
+    "redux-devtools": "^3.4.0",
     "webpack": "^1.0.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "immutability-helper": "^2.4.0",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-select": "^1.0.0-rc.10"
+    "react-redux": "^5.0.6",
+    "react-select": "^1.0.0-rc.10",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^2.2.2"
   }
 }
