--- a/codalab/apps/web/package.json
+++ b/codalab/apps/web/package.json
@@ -15,22 +15,31 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.4.0",
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.3.13",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "bower": "^1.7.7",
+    "css-loader": "^0.28.7",
     "del": "^2.2.0",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^1.1.5",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-less": "^3.0.5",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "redux-devtools": "^3.4.0",
-    "webpack": "^1.0.0"
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^2.7.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "immutability-helper": "^2.4.0",
     "isomorphic-fetch": "^2.2.1",
+    "rc-menu": "^6.1.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
@@ -38,6 +47,9 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-less": "^2.2.12",
+    "semantic-ui-react": "^0.76.0",
     "styled-components": "^2.2.2"
   }
 }
