implements new actions for bundle search, also adds code to limit number of search results

--- a/codalab/apps/web/package.json
+++ b/codalab/apps/web/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "bower": "bower install",
-    "build": "gulp jsx && gulp less",
+    "build": "gulp jsx && gulp less && node_modules/.bin/webpack",
     "clean": "gulp clean",
     "jsx": "gulp jsx",
     "less": "gulp less",
