--- a/codalab/apps/web/package.json
+++ b/codalab/apps/web/package.json
@@ -39,6 +39,7 @@
     "babel-polyfill": "^6.26.0",
     "immutability-helper": "^2.4.0",
     "isomorphic-fetch": "^2.2.1",
+    "number-to-words": "^1.2.3",
     "rc-menu": "^6.1.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
