--- a/codalab/apps/web/package.json
+++ b/codalab/apps/web/package.json
@@ -40,6 +40,7 @@
     "immutability-helper": "^2.4.0",
     "isomorphic-fetch": "^2.2.1",
     "number-to-words": "^1.2.3",
+    "prop-types": "^15.6.0",
     "rc-menu": "^6.1.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
