--- a/codalab/apps/web/package.json
+++ b/codalab/apps/web/package.json
@@ -44,6 +44,7 @@
     "rc-menu": "^6.1.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-mousetrap": "^0.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
