--- a/codalab/apps/web/package.json
+++ b/codalab/apps/web/package.json
@@ -14,10 +14,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.4.0",
+    "@babel/preset-env": "^7.0.0-beta.34",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "bower": "^1.7.7",
@@ -36,9 +39,12 @@
     "webpack": "^2.7.0"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.34",
     "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.26.0",
     "immutability-helper": "^2.4.0",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "number-to-words": "^1.2.3",
     "pretty-bytes": "^4.0.2",
