--- a/codalab/apps/web/package.json
+++ b/codalab/apps/web/package.json
@@ -36,16 +36,19 @@
     "redux-devtools": "^3.4.0",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
-    "webpack": "^2.7.0"
+    "webpack": "^2.7.0",
+    "webpack-bundle-analyzer": "^2.9.1"
   },
   "dependencies": {
     "@babel/core": "^7.0.0-beta.34",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
+    "core-js": "^2.5.3",
     "immutability-helper": "^2.4.0",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "lodash.debounce": "^4.0.8",
     "number-to-words": "^1.2.3",
     "pretty-bytes": "^4.0.2",
     "prop-types": "^15.6.0",
