Adds 'npm run watch' command, which runs the jsx and less compilation whenever source files change.

--- a/codalab/apps/web/package.json
+++ b/codalab/apps/web/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "bower": "bower install",
     "build": "gulp jsx && gulp less",
+    "watch": "gulp watch",
     "clean": "gulp clean",
     "jsx": "gulp jsx",
     "less": "gulp less",
